# opengate

./: README.md
opengate/: CMakeLists.txt
opengate/source/: CMakeLists.txt  og_agent.cpp  og_agent.h  og_agent_service.cpp  og_agent_service.h  og_agent_thread.cpp  og_agent_thread.h  og_config.cpp  og_config.h  og_debug.cpp  og_debug.h  og_down_service.cpp  og_down_service.h  og_down_service_message.cpp  og_main.cpp  og_message_define.h  og_signal_handler.cpp  og_signal_handler.h  og_stdafx.cpp  og_stdafx.h  og_up_service.cpp  og_up_service.h  og_up_thread.cpp  og_up_thread.h  og_util.cpp  og_util.h  opengate.ini  shutdown.sh  startup.sh
opengate/test/: CMakeLists.txt
opengate/test/chat_room/: CMakeLists.txt
opengate/test/chat_room/client/: CMakeLists.txt  chatroom-client.rc  crc_chat_dialog.cpp  crc_chat_dialog.h  crc_main.cpp  crc_win_main.cpp  resource.h
opengate/test/chat_room/common/: cr_chat_package.cpp  cr_chat_package.h  cr_stdafx.cpp  cr_stdafx.h
opengate/test/chat_room/server/: CMakeLists.txt  crs_main.cpp
opengate/test/pressure/: CMakeLists.txt
opengate/test/pressure/client/: CMakeLists.txt  prc_main.cpp
opengate/test/pressure/common/: pr_package.cpp  pr_package.h  pr_stdafx.cpp  pr_stdafx.h
opengate/test/pressure/server/: CMakeLists.txt  prs_main.cpp
proto_files/: ID_Generator.py  Msg_Generator.py
proto_files/protofiles/: ChatMessage.proto  GateMessage.proto
